58) kernel: ralink_gpio: add usb lid blink at usb transfer.<br>
59) kernel: ralink_nvram: add options for config dualband mode nvram(one or different offsets).<br>
60) kernel: huge update NAND framework from upstream.<br>
61) kernel: exfat: add module alias for fix automount.<br>
62) kernel: ipv4: ip_check_defrag should correctly check return value of skb_copy_bits.<br>
63) kernel: ipv6: fix ipv6_cow_metrics for non DST_HOST case.<br>
64) kernel: igmp: add __ip_mc_{join|leave}_group().<br>
65) kernel: pci: leave MEM and IO decoding disabled during 64-bit BAR sizing, too.<br>
66) kernel: sg: fix read() error reporting.<br>
<br>
<br>
<b>2.5.x</b><br>
1) init.d: unify swicth portmap logic.<br>
2) init.d: fix vlan enabled check.<br>
3) init.d: optimize switch reinit procesure.<br>
4) init.d: more human readable variable name and prevent overwrites in dependen logic.<br>
5) init.d: touch switch in some cases make depend at switch parth instead of direct mode check.<br>
6) init.d: remove switch reinit workarounds after reath and hw_nat pathcs.<br>
7) init.d: fix check vlan and set correct part sitch mode.<br>
8) init.d: fix drop some variables in full bridge modes.<br>
9) kernel: ralink_hw_nat: do not touch MT7620 ESW P6/P7 PCR for case dumb switch.<br>
10) kernel: mips: avoid mcheck by flushing page range in huge_ptep_set_access_flags().<br>
11) kernel: mips: fix branch emulation of branch likely instructions.<br>
12) kernel: mips: add option to disable software I/O  coherency.<br>
13) kernel: mips: reduce code size for MIPS32R2 platforms.<br>
14) kernel: net: fix stacked vlan offload features computation.<br>
15) kernel: net: reject creation of netdev names with colons.<br>
<br>
<br>
<b>TODO:</b><br>
1) port support l2tp/pptp hardware NAT offload (really needed??? in sdk very ugly code).<br>
2) full russian ui (need help community or employ the web developer).<br>
3) need add irqbalance in WebUI (in last stage of 7621 dev).<br>
<br>
<br>
<br>